--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -64,6 +64,8 @@
     <Compile Include="Customer.cs" />
     <Compile Include="DTO\Accessory\AccessoryCreatingDTO.cs" />
     <Compile Include="DTO\Accessory\AccessoryGettingDTO.cs" />
+    <Compile Include="DTO\OrderDetail\OrderDetailStatisticDTO.cs" />
+    <Compile Include="DTO\Order\OrderRevenueYearDto.cs" />
     <Compile Include="DTO\PDF\AccessoryPDFCreatingDTO.cs" />
     <Compile Include="DTO\PDF\OrderPDFCreatingDTO.cs" />
     <Compile Include="DTO\Customer\CustomerCreateDto.cs" />
