--- a/QUANLYLINHKIEN_PTUD/packages.config
+++ b/QUANLYLINHKIEN_PTUD/packages.config
@@ -3,5 +3,8 @@
   <package id="AutoMapper" version="7.0.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="iTextSharp" version="5.5.13.1" targetFramework="net45" />
+  <package id="LiveCharts" version="0.9.7" targetFramework="net45" />
+  <package id="LiveCharts.WinForms" version="0.9.7.1" targetFramework="net45" />
+  <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" />
 </packages>
